--- a/kpis/index-token-kpi/indexTokenKPIs.ipynb
+++ b/kpis/index-token-kpi/indexTokenKPIs.ipynb
@@ -46,7 +46,7 @@
     "tags": []
    },
    "source": [
-    "#### Note that my timezone is in Eastern Standard Time (USA) and the data reported in unixtime was later adjusted to my locale. "
+    "#### Note that my timezone is in Eastern Standard Time (USA) and the data reported in unixtime was later adjusted to my locale (adjusted by datetime package). "
    ]
   },
   {
@@ -1059,96 +1059,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 234,
    "id": "94fcd128-99a4-4aa9-8572-d07f125e978b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15.259755871722591"
-      ]
-     },
-     "execution_count": 222,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mainDf['indexPrice'].describe()['std']"
+    "mainStd = mainDf['indexPrice'].describe()['std']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 233,
    "id": "71ffc6ca-84b9-45f2-a7fd-f57f70fcaad0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([14.13, 16.45])"
-      ]
-     },
-     "execution_count": 223,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pg.compute_bootci(x=mainDf.indexPrice, func='std', n_boot=10000, seed=0)"
+    "mainStdCI = pg.compute_bootci(x=mainDf.indexPrice, func='std', n_boot=10000, seed=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 236,
    "id": "68c6e4af-ccd4-4a63-a377-4b7302b73b84",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.004690359427498269"
-      ]
-     },
-     "execution_count": 225,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mainDf['indexPriceInETH'].describe()['std']"
+    "mainStdEth = mainDf['indexPriceInETH'].describe()['std']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 237,
    "id": "279331c3-cc94-45c7-8693-d1f70400d932",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.  , 0.01])"
-      ]
-     },
-     "execution_count": 224,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pg.compute_bootci(x=mainDf.indexPriceInETH, func='std', n_boot=10000, seed=0)"
+    "mainStdEthCI = pg.compute_bootci(x=mainDf.indexPriceInETH, func='std', n_boot=10000, seed=0)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "16cfe050-ed56-4286-a7df-c5eda36a6130",
-   "metadata": {
-    "tags": []
-   },
+   "cell_type": "code",
+   "execution_count": 239,
+   "id": "eaaf481c-519e-4d4a-ae2e-13c1a50d4d13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Since genesis, standard deviation of INDEX price has been $15.259755871722591 with 95% confidence interval [14.13 16.45]. Measured in ETH, standard deviation of INDEX price has been 0.004690359427498269 ETH 95%CI [0.   0.01].\n"
+     ]
+    }
+   ],
    "source": [
-    "#### Since genesis, standard deviation of INDEX price has been $15.26 with 95% confidence interval (14.13,16.45). Measured in ETH, standard deviation of INDEX price has been 0.00469 ETH 95%CI (0, 0.01). I suspect there is a lower bound to reporting the bottom end of the 95% CI range. "
+    "print(f\"Since genesis, standard deviation of INDEX price has been ${mainStd} with 95% confidence interval {mainStdCI}. Measured in ETH, standard deviation of INDEX price has been {mainStdEth} ETH 95%CI {mainStdEthCI}.\")"
    ]
   },
   {
@@ -1215,171 +1179,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 241,
    "id": "5e02ff12-b844-4f9c-abed-5d1a2051d374",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>n</th>\n",
-       "      <th>r</th>\n",
-       "      <th>CI95%</th>\n",
-       "      <th>p-val</th>\n",
-       "      <th>power</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>spearman</th>\n",
-       "      <td>307</td>\n",
-       "      <td>0.877895</td>\n",
-       "      <td>[0.85, 0.9]</td>\n",
-       "      <td>1.504454e-99</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            n         r        CI95%         p-val  power\n",
-       "spearman  307  0.877895  [0.85, 0.9]  1.504454e-99    1.0"
-      ]
-     },
-     "execution_count": 230,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pg.corr(mainDf.ethPrice, mainDf.indexPrice, method='spearman')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4e98c3a9-5fed-4fef-9fb0-15832c4e439c",
-   "metadata": {},
-   "source": [
-    "#### Since genesis, Spearman's correlation is 0.878 with 95% confidence interval [0.85, 0.9]"
+    "mainSpearman = pg.corr(mainDf.ethPrice, mainDf.indexPrice, method='spearman')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
-   "id": "94edc6ef-71b1-43c7-95a8-a6899bd83b3d",
+   "execution_count": 252,
+   "id": "5cb0bb20-5fa8-4995-8d68-906428cfa6a1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "count    307.000000\n",
-       "mean      21.231833\n",
-       "std       15.259756\n",
-       "min        1.350407\n",
-       "25%        5.858979\n",
-       "50%       21.769802\n",
-       "75%       30.266129\n",
-       "max       67.031503\n",
-       "Name: indexPrice, dtype: float64"
-      ]
-     },
-     "execution_count": 192,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Since genesis, Spearman's correlation is 0.878 with 95% confidence interval [0.85 0.9 ]\n"
+     ]
     }
    ],
    "source": [
-    "mainDf['indexPrice'].describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "id": "597f5d11-669f-49d0-9f54-7bf168a17dbf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([14.13, 16.45])"
-      ]
-     },
-     "execution_count": 193,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pg.compute_bootci(x=mainDf.indexPrice, func='std', n_boot=10000, seed=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "id": "aa13793e-5d3a-4239-9654-a147ef084348",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    307.000000\n",
-       "mean       0.011850\n",
-       "std        0.004690\n",
-       "min        0.003070\n",
-       "25%        0.008426\n",
-       "50%        0.010966\n",
-       "75%        0.014679\n",
-       "max        0.029444\n",
-       "Name: indexPriceInETH, dtype: float64"
-      ]
-     },
-     "execution_count": 194,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mainDf['indexPriceInETH'].describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
-   "id": "7250942b-52fb-4dca-a8db-af4e3a871cae",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.  , 0.01])"
-      ]
-     },
-     "execution_count": 195,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pg.compute_bootci(x=mainDf.indexPriceInETH, func='std', n_boot=10000, seed=0)"
+    "print(f\"Since genesis, Spearman's correlation is {round(mainSpearman['r'][0], 3)} with 95% confidence interval {mainSpearman['CI95%'][0]}\")"
    ]
   },
   {
@@ -1545,96 +1368,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 253,
    "id": "21631640-f0da-4c18-8201-63fbd2b6c5ff",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9.465129678890891"
-      ]
-     },
-     "execution_count": 220,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df90d['indexPrice'].describe()['std']"
+    "std90d = df90d['indexPrice'].describe()['std']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 254,
    "id": "ecd70fb4-04dd-4066-8b1d-061143126434",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 7.15, 11.93])"
-      ]
-     },
-     "execution_count": 201,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pg.compute_bootci(x=df90d.indexPrice, func='std', n_boot=10000, seed=0)"
+    "std90dCI = pg.compute_bootci(x=df90d.indexPrice, func='std', n_boot=10000, seed=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 255,
    "id": "ad87c119-e956-4e1b-8121-b30011b788fc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.00160167097714522"
-      ]
-     },
-     "execution_count": 221,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df90d['indexPriceInETH'].describe()['std']"
+    "std90dEth = df90d['indexPriceInETH'].describe()['std']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 256,
    "id": "1fa9f40c-ab00-4cfa-86d2-76d7d3fa753f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0.])"
-      ]
-     },
-     "execution_count": 203,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pg.compute_bootci(x=df90d.indexPriceInETH, func='std', n_boot=10000, seed=0)"
+    "std90dEthCI = pg.compute_bootci(x=df90d.indexPriceInETH, func='std', n_boot=10000, seed=0)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2b677519-66e3-497c-a4c0-5c55fb196557",
-   "metadata": {
-    "tags": []
-   },
+   "cell_type": "code",
+   "execution_count": 258,
+   "id": "6b101d59-36af-4aaf-9109-14ebc9e0442e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In the last 90 days, standard deviation of INDEX price has been $9.465129678890891 with 95% confidence interval [ 7.15 11.93]. Measured in ETH, standard deviation of INDEX price has been 0.00160167097714522 ETH 95%CI [0. 0.].\n"
+     ]
+    }
+   ],
    "source": [
-    "#### In the last 90 days, standard deviation of INDEX price has been $10.06 with 95% confidence interval (7.66,12.51). Measured in ETH, standard deviation of INDEX price has been 0.001658 ETH 95%CI (0, 0). I suspect there is a lower bound to reporting the bottom end of the 95% CI range. "
+    "print(f\"In the last 90 days, standard deviation of INDEX price has been ${std90d} with 95% confidence interval {std90dCI}. Measured in ETH, standard deviation of INDEX price has been {std90dEth} ETH 95%CI {std90dEthCI}.\")"
    ]
   },
   {
@@ -1701,71 +1488,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 260,
    "id": "e41ef88d-9d3d-4971-a1fc-1d1227e391b2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>n</th>\n",
-       "      <th>r</th>\n",
-       "      <th>CI95%</th>\n",
-       "      <th>p-val</th>\n",
-       "      <th>power</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>spearman</th>\n",
-       "      <td>90</td>\n",
-       "      <td>0.870289</td>\n",
-       "      <td>[0.81, 0.91]</td>\n",
-       "      <td>8.361789e-29</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           n         r         CI95%         p-val  power\n",
-       "spearman  90  0.870289  [0.81, 0.91]  8.361789e-29    1.0"
-      ]
-     },
-     "execution_count": 206,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pg.corr(df90d.ethPrice, df90d.indexPrice, method='spearman')"
+    "d90Spearman = pg.corr(df90d.ethPrice, df90d.indexPrice, method='spearman')"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2250bfc3-dc0b-4716-abaf-99b784bb27a8",
+   "cell_type": "code",
+   "execution_count": 261,
+   "id": "860f637f-e55f-4a81-8392-738ad1fc6298",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In the last 90 days, Spearman's correlation is 0.87 with 95% confidence interval [0.81 0.91]\n"
+     ]
+    }
+   ],
    "source": [
-    "#### Spearman's correlation is 0.87 with 95% confidence interval [0.81, 0.91]"
+    "print(f\"In the last 90 days, Spearman's correlation is {round(d90Spearman['r'][0], 3)} with 95% confidence interval {d90Spearman['CI95%'][0]}\")"
    ]
   },
   {
