fixed notebook to automatically run data up to the present day

--- a/kpis/index-token-kpi/indexTokenKPIs.ipynb
+++ b/kpis/index-token-kpi/indexTokenKPIs.ipynb
@@ -54,24 +54,24 @@
    "id": "aaa442e7-24ef-48d1-bf38-80166d6f4c86",
    "metadata": {},
    "source": [
-    "You can change the dates below (such as the ending day to the present day), and the code should run start to finish. \n",
+    "You can change the dates below (such as the ending day to yesterday), and the code should run start to finish. \n",
     "INDEX's first day of recorded prices according to Coingecko API is 10/6/2020."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 263,
    "id": "d3c347cc-ea9c-463c-9742-2c4a6fb1dc33",
    "metadata": {},
    "outputs": [],
    "source": [
     "start_dt = date(2020, 10, 6)\n",
-    "end_dt = date(2021, 8, 10)"
+    "end_dt = date.today()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 264,
    "id": "2785b218-a5c9-4f71-b552-341855895c0c",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 265,
    "id": "14eca351-2f82-4c16-bea8-7be81265f2dc",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 266,
    "id": "7d53b195-fc95-48f0-96fd-14571723538e",
    "metadata": {
     "tags": []
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 267,
    "id": "1945b5d8-3c31-46a2-8cd5-f2b0f76882d0",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 268,
    "id": "fae7eacb-724b-4c2d-b28a-e772503c30c8",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 269,
    "id": "d97f1a9e-4715-40ac-ac47-49d0fa583cb5",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "dict_keys(['prices', 'market_caps', 'total_volumes'])"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 270,
    "id": "acb791b6-2e2b-402c-8cdb-07d7d084c9bd",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 271,
    "id": "215e3f1a-ddea-4cce-9494-ba61c462584e",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 272,
    "id": "cc2fecad-7bbc-429a-b30e-e044726b9a49",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 273,
    "id": "c3309ae3-2ab7-4030-8364-37aba03e314c",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 274,
    "id": "58ccb126-f70c-4863-9b06-04c2be3c8b51",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
        "[307 rows x 10 columns]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 275,
    "id": "c0bcf0e3-a3ba-4367-9530-1af4bd5cd0a2",
    "metadata": {},
    "outputs": [],
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 276,
    "id": "e751a78d-5d6d-4dbd-b524-7cf5ef5b3bca",
    "metadata": {},
    "outputs": [],
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 277,
    "id": "0d718c06-4eec-4afe-858e-d371bc3445b7",
    "metadata": {},
    "outputs": [],
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 278,
    "id": "0e41e9ac-2bd2-452c-b5da-67ee5c63a37a",
    "metadata": {},
    "outputs": [],
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 279,
    "id": "252d83f1-fcab-49eb-9332-7c88e79eda10",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
        "[307 rows x 7 columns]"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 280,
    "id": "5467db07-ad7f-47a0-af8e-6e71dcc58f35",
    "metadata": {},
    "outputs": [],
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 281,
    "id": "d85a914f-518e-4449-81fa-cd3c4eb29fcd",
    "metadata": {},
    "outputs": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 282,
    "id": "011be499-6cc0-42b5-84c5-2d3acc09d801",
    "metadata": {},
    "outputs": [
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 283,
    "id": "db1bf706-b882-4149-b9a6-04f5377135df",
    "metadata": {},
    "outputs": [],
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 284,
    "id": "de288d09-0122-4d8b-bd6b-26983382d353",
    "metadata": {},
    "outputs": [],
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 285,
    "id": "18474cf4-ab39-48f6-8b37-1e0c26f868db",
    "metadata": {},
    "outputs": [],
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 286,
    "id": "62d0f40c-2d50-4e16-8e75-f75387802335",
    "metadata": {},
    "outputs": [],
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 287,
    "id": "c77ad2c4-c701-48d1-be0f-e7c46eeec234",
    "metadata": {},
    "outputs": [
@@ -958,7 +958,7 @@
        "[307 rows x 3 columns]"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 288,
    "id": "1e4aa7c4-bbdc-4fb6-bae2-a5e130660cbf",
    "metadata": {},
    "outputs": [],
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 289,
    "id": "38c06ef0-33e5-4d54-a373-c97dc6fc5510",
    "metadata": {},
    "outputs": [],
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 290,
    "id": "575d3a02-fe42-4e95-9773-afb0d37f2f23",
    "metadata": {},
    "outputs": [],
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 291,
    "id": "8260f674-eabe-4352-b619-dec02e8c0b1f",
    "metadata": {},
    "outputs": [],
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 292,
    "id": "78479e29-131f-4610-90ac-eaae2f118c51",
    "metadata": {},
    "outputs": [],
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 293,
    "id": "74a04030-0eb0-4567-9ce0-6a0e05246315",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 294,
    "id": "94fcd128-99a4-4aa9-8572-d07f125e978b",
    "metadata": {},
    "outputs": [],
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 295,
    "id": "71ffc6ca-84b9-45f2-a7fd-f57f70fcaad0",
    "metadata": {},
    "outputs": [],
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 296,
    "id": "68c6e4af-ccd4-4a63-a377-4b7302b73b84",
    "metadata": {},
    "outputs": [],
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 297,
    "id": "279331c3-cc94-45c7-8693-d1f70400d932",
    "metadata": {},
    "outputs": [],
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 298,
    "id": "eaaf481c-519e-4d4a-ae2e-13c1a50d4d13",
    "metadata": {},
    "outputs": [
@@ -1117,17 +1117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 299,
    "id": "740dc488-6c3f-4693-9fbc-a0c2266405f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.JointGrid at 0x188852a0b20>"
+       "<seaborn.axisgrid.JointGrid at 0x18882c45b20>"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 300,
    "id": "fcdca6d0-efc5-48f0-bb6a-61e07e9fdc3b",
    "metadata": {},
    "outputs": [
@@ -1160,7 +1160,7 @@
        "HZResults(hz=12.832767907280331, pval=1.5575546854151653e-22, normal=False)"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 301,
    "id": "5e02ff12-b844-4f9c-abed-5d1a2051d374",
    "metadata": {},
    "outputs": [],
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 302,
    "id": "5cb0bb20-5fa8-4995-8d68-906428cfa6a1",
    "metadata": {},
    "outputs": [
@@ -1227,17 +1227,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 303,
    "id": "6eb7529b-c9eb-45b6-a932-972e422c4b3c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.JointGrid at 0x188fc5211f0>"
+       "<seaborn.axisgrid.JointGrid at 0x18884a09d30>"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 303,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 304,
    "id": "4441b392-f334-4f88-be99-2e63397b8fd5",
    "metadata": {},
    "outputs": [
@@ -1270,7 +1270,7 @@
        "HZResults(hz=12.832767907280331, pval=1.5575546854151653e-22, normal=False)"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 305,
    "id": "ac791a95-84d2-4ac3-887c-6748b07fa18f",
    "metadata": {},
    "outputs": [
@@ -1339,7 +1339,7 @@
        "spearman  307  0.877895  [0.85, 0.9]  1.504454e-99    1.0"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 306,
    "id": "0fefe8cf-911f-44be-b94b-125baebe5694",
    "metadata": {},
    "outputs": [],
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 307,
    "id": "21631640-f0da-4c18-8201-63fbd2b6c5ff",
    "metadata": {},
    "outputs": [],
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 308,
    "id": "ecd70fb4-04dd-4066-8b1d-061143126434",
    "metadata": {},
    "outputs": [],
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 309,
    "id": "ad87c119-e956-4e1b-8121-b30011b788fc",
    "metadata": {},
    "outputs": [],
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 310,
    "id": "1fa9f40c-ab00-4cfa-86d2-76d7d3fa753f",
    "metadata": {},
    "outputs": [],
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 311,
    "id": "6b101d59-36af-4aaf-9109-14ebc9e0442e",
    "metadata": {},
    "outputs": [
@@ -1426,17 +1426,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 312,
    "id": "ce80a159-13f9-48d0-b07d-9da78aa3931b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.JointGrid at 0x18884ac46d0>"
+       "<seaborn.axisgrid.JointGrid at 0x1888507a1c0>"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 313,
    "id": "3deb0d39-633a-40f1-9301-e6455534a289",
    "metadata": {},
    "outputs": [
@@ -1469,7 +1469,7 @@
        "HZResults(hz=3.5659292634258146, pval=3.351982358823265e-08, normal=False)"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 314,
    "id": "e41ef88d-9d3d-4971-a1fc-1d1227e391b2",
    "metadata": {},
    "outputs": [],
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 315,
    "id": "860f637f-e55f-4a81-8392-738ad1fc6298",
    "metadata": {},
    "outputs": [
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 316,
    "id": "909cf166-5c20-4f48-99bd-7b01a330ba5c",
    "metadata": {},
    "outputs": [],
@@ -1550,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 317,
    "id": "9e96b95e-d056-457c-9552-29c1d6115304",
    "metadata": {},
    "outputs": [
@@ -1768,7 +1768,7 @@
        "306  2021-08-08            2.185959e+06"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 318,
    "id": "376d374c-e310-4982-8575-22c9cb9dfc58",
    "metadata": {},
    "outputs": [
@@ -1818,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 319,
    "id": "b45a9bfe-ac06-4aa7-af19-bd058588b6e8",
    "metadata": {},
    "outputs": [],
@@ -1836,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 320,
    "id": "e9e152b2-9463-4334-b8ea-fcabd015e688",
    "metadata": {},
    "outputs": [
@@ -2054,7 +2054,7 @@
        "306  2021-08-08             7.228221e+06"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2065,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 321,
    "id": "0d843b5e-72e0-480a-81df-8eea60db61ce",
    "metadata": {},
    "outputs": [
@@ -2110,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 322,
    "id": "d43527ef-0fa2-4392-850b-30c0363e0d6d",
    "metadata": {},
    "outputs": [],
@@ -2128,7 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 323,
    "id": "eca962ce-9c35-4b3d-b57c-34e4f9db1b5f",
    "metadata": {},
    "outputs": [
@@ -2346,7 +2346,7 @@
        "306  2021-08-08          312279.917899"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2357,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 324,
    "id": "b49f27cb-b841-4ddb-bcf1-700275ff8965",
    "metadata": {},
    "outputs": [
@@ -2396,7 +2396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 325,
    "id": "2d4b7bbb-5db4-42f7-8524-76c009553e49",
    "metadata": {},
    "outputs": [],
@@ -2414,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 326,
    "id": "2a8dd783-0b28-4650-ace3-485edca4e4cf",
    "metadata": {},
    "outputs": [
@@ -2632,7 +2632,7 @@
        "306  2021-08-08           240940.707921"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2643,7 +2643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 327,
    "id": "d09e7d71-5349-457b-9c36-da589ad3b995",
    "metadata": {},
    "outputs": [
@@ -2672,7 +2672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 328,
    "id": "818b2cca-0e2b-42b7-8f4f-7d31dafc340f",
    "metadata": {},
    "outputs": [],
