--- a/kpis/index-token-kpi/oneTimeShowcase_8_10_2021.ipynb
+++ b/kpis/index-token-kpi/oneTimeShowcase_8_10_2021.ipynb
@@ -190,6 +190,14 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "e9265de0-2f68-4ada-ae2e-ab869aa98937",
+   "metadata": {},
+   "source": [
+    "#### INDEX has traded roughly within a range of 0.005 ETH to 0.03 ETH per INDEX token"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 374,
    "id": "85e3b72b-97be-4641-af09-09a21bfe7bc0",
