--- a/governance/snapshot-vote-analysis/2021-11-18 selectorate analysis/EDA.ipynb
+++ b/governance/snapshot-vote-analysis/2021-11-18 selectorate analysis/EDA.ipynb
@@ -1054,7 +1054,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
