--- a/governance/snapshot-vote-analysis/2021-11-18 selectorate analysis/Voting Power Centralization Analysis.ipynb
+++ b/governance/snapshot-vote-analysis/2021-11-18 selectorate analysis/Voting Power Centralization Analysis.ipynb
@@ -1167,7 +1167,8 @@
     }
    ],
    "source": [
-    "# Winning Coalition DF has all of the data denormalized \n",
+    "# Winning Coalition DF has all of the data denormalized and in one giant DF, with all of the processing\n",
+    "# steps attached to it.\n",
     "winning_coalition_df = merged_df[merged_df['is_winning_coalition']]\n",
     "winning_coalition_df['is_deciding_vote'] = winning_coalition_df.apply(is_deciding_vote,axis=1)\n"
    ]
@@ -1175,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e2bfd676",
+   "id": "3afcf9ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "cf54de67",
+   "id": "af03c266",
    "metadata": {},
    "outputs": [],
    "source": [
