--- a/governance/snapshot-vote-analysis/2021-11-18 voting centralization analysis/Voting Power Centralization Analysis.ipynb
+++ b/governance/snapshot-vote-analysis/2021-11-18 voting centralization analysis/Voting Power Centralization Analysis.ipynb
@@ -19,7 +19,7 @@
    "id": "71803e6b-051d-447b-af62-15699c8b00bf",
    "metadata": {},
    "source": [
-    "# Functions"
+    "# Using GraphQL to pull data from Snapshot"
    ]
   },
   {
@@ -117,14 +117,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "34579c29-a5f9-48d6-a18e-d4e21b776e43",
-   "metadata": {},
-   "source": [
-    "# Querying and Dumping the Data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "88074786-3bc1-414d-b2f6-650d5c264fee",
@@ -200,26 +192,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ffb6eecb-0afa-4f91-9c97-e26307d9404b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#proposal_json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "63cf7490-6c7b-4215-b3b6-e8f81e077938",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#proposal_json"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "id": "fe8a7a98-7c24-4d42-a47a-fc475d79e227",
    "metadata": {},
@@ -251,7 +223,7 @@
    "id": "d0abe75f-bc7e-49f4-92db-d6fa627af7f3",
    "metadata": {},
    "source": [
-    "## Cleaning Proposal df"
+    "## Cleaning Proposal dataframe"
    ]
   },
   {
@@ -314,14 +286,6 @@
     "proposals_df['result'] = proposals_df.apply(make_proposal_result,axis=1) # Make category column\n",
     "proposals_df.to_json('proposals_df.json')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6fcc42bb-5ca2-4731-8d7f-ac25e1332355",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -679,21 +643,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54362c85-0630-481a-9b1e-620f0cd98c44",
+   "cell_type": "markdown",
+   "id": "9ac530b1",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "84e1f05d-5da2-4c45-bcac-a8712950af4b",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "#"
+    "## Pull votes from Snapshot"
    ]
   },
   {
@@ -1170,7 +1124,9 @@
     "# Winning Coalition DF has all of the data denormalized and in one giant DF, with all of the processing\n",
     "# steps attached to it.\n",
     "winning_coalition_df = merged_df[merged_df['is_winning_coalition']]\n",
-    "winning_coalition_df['is_deciding_vote'] = winning_coalition_df.apply(is_deciding_vote,axis=1)\n"
+    "winning_coalition_df['is_deciding_vote'] = winning_coalition_df.apply(is_deciding_vote,axis=1)\n",
+    "\n",
+    "# We ignore the error here since we want to work with the copy"
    ]
   },
   {
@@ -1197,14 +1153,6 @@
     "                       .pivot_table(index='voter',columns='is_deciding_vote',values='counts',fill_value=0)\\\n",
     "                       .sort_values(by='Was Deciding Voter',ascending=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d661b965-f761-44ea-adaa-71a1ed7f3a39",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1893,46 +1841,6 @@
    "source": [
     "deciding_vote_by_proposal_pivoted.to_csv('deciding_votes_by_proposal_pivoted_df.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4771190e-c58a-4dee-b66b-6c230f6a9398",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1269964c-1a01-42b6-babd-59d2cb7aa280",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "edb5a0e0-49b7-4bdd-850f-9c1b86401f1e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be38e24f-b193-41aa-a3cd-49089ab047d2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f63ac893-6e6d-4fce-807e-294d6dd14a3a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
