added arb cost simulator

--- a/product/adhoc_analyses/2022-01-24 Balancer_Solution_Writeup.ipynb
+++ b/product/adhoc_analyses/2022-01-24 Balancer_Solution_Writeup.ipynb
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8830cdf1-c6f0-4744-aefa-3b183c77335b",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d774659f-3d01-4e4b-a4f9-935ffe39b830",
    "metadata": {},
    "outputs": [],
@@ -288,6 +288,8 @@
     "    \n",
     "    \n",
     "    \n",
+    "    \n",
+    "\n",
     "    "
    ]
   },
@@ -301,15 +303,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9b038cae-6ed7-4952-8351-9576b7d6b6b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "mkt_sp_vec = np.array([.25])\n",
     "balance_old_vec = np.array([1000,2000])\n",
-    "weights_old_vec = np.array([2/3,1/3]) # Note that this is here to show the initial equilibrium. \n",
-    "\n"
+    "weights_old_vec = np.array([2/3,1/3]) # Note that this is here to show the initial equilibrium. \n"
    ]
   },
   {
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "cdac2eb3-dd49-4ef2-b375-933ecaa62fa9",
    "metadata": {},
    "outputs": [
@@ -361,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d04d57d2-a56b-4a51-9919-a528ba2a1c91",
    "metadata": {},
    "outputs": [],
@@ -371,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "40344278-be67-4a7d-919c-c93bc62a64d5",
    "metadata": {},
    "outputs": [
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "id": "ccfbca0a-f65c-45fb-90a6-36bcf6a35943",
    "metadata": {},
    "outputs": [],
@@ -413,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "5a40d3f0-4e45-406d-87f5-0a7144956ea2",
    "metadata": {},
    "outputs": [
@@ -451,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "f541e6ce-3d23-4d75-b3d3-d102903a7abe",
    "metadata": {},
    "outputs": [
@@ -464,21 +465,21 @@
       "Balances after shift 1999: [ 950.0188417  2199.91730514]\n",
       "Total Value in terms of token 1 after shift 1999: 1499.998167984469\n",
       "Balances after shift 2999: [ 925.01582364 2299.92582061]\n",
-      "Total Value in terms of token 1 after shift 2999: 1499.9972787928732\n",
+      "Total Value in terms of token 1 after shift 2999: 1499.9972787928646\n",
       "Balances after shift 3999: [ 900.01284394 2399.93424075]\n",
-      "Total Value in terms of token 1 after shift 3999: 1499.9964041261328\n",
+      "Total Value in terms of token 1 after shift 3999: 1499.996404126127\n",
       "Balances after shift 4999: [ 875.00990044 2499.94256438]\n",
       "Total Value in terms of token 1 after shift 4999: 1499.9955415367915\n",
       "Balances after shift 5999: [ 850.00699126 2599.95078999]\n",
       "Total Value in terms of token 1 after shift 5999: 1499.9946887601282\n",
       "Balances after shift 6999: [ 825.00411474 2699.95891574]\n",
-      "Total Value in terms of token 1 after shift 6999: 1499.9938436743996\n",
+      "Total Value in terms of token 1 after shift 6999: 1499.9938436743955\n",
       "Balances after shift 7999: [ 800.00126942 2799.96693939]\n",
       "Total Value in terms of token 1 after shift 7999: 1499.9930042666363\n",
       "Balances after shift 8999: [ 774.99845401 2899.97485835]\n",
-      "Total Value in terms of token 1 after shift 8999: 1499.9921686022396\n",
+      "Total Value in terms of token 1 after shift 8999: 1499.9921686022471\n",
       "Balances after shift 9999: [ 749.9956674  2999.98266959]\n",
-      "Total Value in terms of token 1 after shift 9999: 1499.9913347974502\n"
+      "Total Value in terms of token 1 after shift 9999: 1499.9913347974493\n"
      ]
     }
    ],
@@ -501,17 +502,156 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "880fe2f0-21e2-44cf-a154-48173a409a88",
+   "metadata": {},
+   "source": [
+    "# Simulating A Rebalance\n",
+    "\n",
+    "We can model out the constraints that go into the minimum number of rebalances that can be arbed and thus the total AUM loss for sample assets A and B.\n",
+    "\n",
+    "Assumptions:\n",
+    "- Initial portfolio size\n",
+    "- Given constant price\n",
+    "- Constant gas cost of trade\n",
+    "\n",
+    "The simulation below is generalizable to broader portfolios as well."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "880fe2f0-21e2-44cf-a154-48173a409a88",
+   "id": "599fdcb5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "id": "83af1f42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Old Balances [   1 3000]\n",
+      "Showing Equilibrium: Balances \"after a shift\" \n",
+      "Total Value in terms of token 1:  1.960131704207789\n",
+      "Balances after shift 999: [1.22769136e+00 1.98306296e+03]\n",
+      "Total Value in terms of token 1 after shift 999: 1.8887123437181044\n",
+      "Balances after shift 1999: [1.19401009e+00 2.07368791e+03]\n",
+      "Total Value in terms of token 1 after shift 1999: 1.8852393896612765\n",
+      "Balances after shift 2999: [1.15906060e+00 2.16138471e+03]\n",
+      "Total Value in terms of token 1 after shift 2999: 1.879522172608488\n",
+      "Balances after shift 3999: [1.12299113e+00 2.24588867e+03]\n",
+      "Total Value in terms of token 1 after shift 3999: 1.8716206847793382\n",
+      "Balances after shift 4999: [1.09036579e+00 2.33641800e+03]\n",
+      "Total Value in terms of token 1 after shift 4999: 1.8691717850043394\n",
+      "Balances after shift 5999: [1.05762225e+00 2.42624398e+03]\n",
+      "Total Value in terms of token 1 after shift 5999: 1.866370239367755\n",
+      "Balances after shift 6999: [1.02381512e+00 2.51294998e+03]\n",
+      "Total Value in terms of token 1 after shift 6999: 1.861465115540601\n",
+      "Balances after shift 7999: [9.89067265e-01 2.59626680e+03]\n",
+      "Total Value in terms of token 1 after shift 7999: 1.85448953035881\n",
+      "Balances after shift 8999: [9.55658755e-01 2.68199215e+03]\n",
+      "Total Value in terms of token 1 after shift 8999: 1.8496561397069402\n",
+      "Balances after shift 9999: [9.23840825e-01 2.77152248e+03]\n",
+      "Total Value in terms of token 1 after shift 9999: 1.8476816503812985\n",
+      "Initial Balances: [   1 3000]\n",
+      "Initial portfolio value in ETH: 2.0\n",
+      "Final balance: [9.23840825e-01 2.77152248e+03]\n",
+      "Final portfolio value in ETH: 1.8476816503812985\n",
+      "Total number of arbs: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Some sample parameters:\n",
+    "balance_old_vec = np.array([1,3000])\n",
+    "weights_old_vec = np.array([0.5,0.5])\n",
+    "# This could represent a 50/50 ETH-DAI pair, with 1 ETH and 3000 DAI in it. if it's at equilibrium, ETH is $3000.\n",
+    "\n",
+    "print('Old Balances', balance_old_vec)\n",
+    "new_balance = calc_new_balances(mkt_sp_vec,balance_old_vec,weights_new_vec)\n",
+    "print('Showing Equilibrium: Balances \"after a shift\" ', )\n",
+    "print('Total Value in terms of token 1: ', new_balance[0] + np.dot(mkt_sp_vec,new_balance[1:]))\n",
+    "\n",
+    "# Given a set of token balances, return a price vector that assumes the token balances represent equilibrium prices\n",
+    "def create_prices_from_balances(balances, weights):\n",
+    "  return np.divide(balances[0]/weights[0],np.divide(balances[1:],weights[1:])) # should return a vector of balances.length - 1\n",
+    "# Use this utility to set the initial weights and prices for estimating the cost\n",
+    "mk_sp_vec = create_prices_from_balances(balance_old_vec, weights_old_vec)\n",
+    "\n",
+    "# For the purposes of the simulation, the first token should always be ETH. We'll be expressing trade costs in ETH.\n",
+    "# Some constants for estimating the constant gas cost of arbing\n",
+    "GWEI_PER_ETH = 10 ** 9\n",
+    "AVG_TXN_GAS_COST = 200000\n",
+    "def calculate_trade_cost_in_ETH(gas_cost_per_trade, gas_price_in_gwei, trades_per_arb):\n",
+    "  return gas_cost_per_trade*gas_price_in_gwei/GWEI_PER_ETH * trades_per_arb\n",
+    "\n",
+    "arb_cost_in_eth = calculate_trade_cost_in_ETH(AVG_TXN_GAS_COST, 100, 1)\n",
+    "\n",
+    "\n",
+    "# attempt to split the reweighting into 10k steps\n",
+    "weights_new_vec = np.array([2/3,1/3])\n",
+    "num_weights=10000\n",
+    "# TODO: create this array dynamically based upon weights_new_vec\n",
+    "weights_array = np.vstack([\n",
+    "    np.linspace(2/3,.5,num=num_weights),\n",
+    "    np.linspace(1/3,.5,num=num_weights)\n",
+    "])\n",
+    "prev_balance = balance_old_vec\n",
+    "num_arbs = 0\n",
+    "for ii in range(num_weights):\n",
+    "    initial_eth_value = prev_balance[0] + np.dot(mkt_sp_vec,prev_balance[1:])\n",
+    "    weights_new = weights_array[:,ii]\n",
+    "    balance_after_shift_ii = calc_new_balances(mkt_sp_vec, prev_balance, weights_new)\n",
+    "    if (ii + 1) % 1000 == 0:\n",
+    "        print('Balances after shift {}: {}'.format(ii, balance_after_shift_ii))\n",
+    "        print('Total Value in terms of token 1 after shift {}: {}'.format(ii,balance_after_shift_ii[0] + np.dot(mkt_sp_vec,balance_after_shift_ii[1:])))\n",
+    "    post_arb_eth_value = balance_after_shift_ii[0] + np.dot(mkt_sp_vec,balance_after_shift_ii[1:])\n",
+    "    # if the arb is profitable then execute the arb\n",
+    "    if(initial_eth_value - post_arb_eth_value > arb_cost_in_eth): \n",
+    "      num_arbs += 1\n",
+    "      prev_balance = balance_after_shift_ii\n",
+    "\n",
+    "print('Initial Balances: {}'.format(balance_old_vec))\n",
+    "print('Initial portfolio value in ETH: {}'.format(balance_old_vec[0] + np.dot(mkt_sp_vec,balance_old_vec[1:])))\n",
+    "print('Final balance: {}'.format(balance_after_shift_ii))\n",
+    "print('Final portfolio value in ETH: {}'.format(balance_after_shift_ii[0] + np.dot(mk_sp_vec,balance_after_shift_ii[1:])))\n",
+    "print('Total number of arbs: {}'.format(num_arbs))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "8d130e3f-920a-4d1c-8678-38bd317f1cb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "GWEI_PER_ETH = 10 ** 9\n",
+    "AVG_TXN_GAS_COST = 200000\n",
+    "def calculate_trade_cost_in_ETH(gas_cost, gas_price_in_gwei):\n",
+    "  return gas_cost*gas_price_in_gwei/GWEI_PER_ETH\n",
+    "\n",
+    "print(calculate_trade_cost_in_ETH(AVG_TXN_GAS_COST, 100))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65aafa16",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -533,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
